force-app/main/default/objects/CertificationQuestion__c/CertificationQuestion__c.object-meta.xml
<CustomObject>
    <label>Certification Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Certification Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>