force-app/main/default/objects/CertificationQuestion__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>ExternalId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>