force-app/main/default/objects/CertificationQuestion__c/fields/RightAnswersCount__c.field-meta.xml
<CustomField>
    <fullName>RightAnswersCount__c</fullName>
    <label>RightAnswersCount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>