force-app/main/default/objects/CertificationQuestion__c/fields/Tip__c.field-meta.xml
<CustomField>
    <fullName>Tip__c</fullName>
    <label>Tip</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>