force-app/main/default/objects/CertificationQuestion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QuestionText__c</columns>
    <columns>RightAnswersCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>